@@ -1,5 +1,6 @@
 0.16.8 release
 
+	* make rename_file create missing directories for new filename
 	* added missing python function: parse_magnet_uri
 	* fix alerts.all_categories in python binding
 	* fix torrent-abort issue which would cancel name lookups of other torrents
